--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ wbr {         outline: 1px solid #DB175B!important; }*/
 * {
   font-family: 'Open Sans Condensed', sans-serif;
   box-sizing: border-box;
+  color: rgba(153, 235, 255, 1);
 
 }
 
@@ -115,18 +116,20 @@ wbr {         outline: 1px solid #DB175B!important; }*/
 }
 
 #bg {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index:-1;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index:-1;
 }
 
 body {
   font-family: 'Open Sans Condensed', sans-serif;
   background-size: 100%;
- }
+  color: rgba(153, 235, 255, 1);
+}
+
 
 
 span {
@@ -137,10 +140,10 @@ span {
   color: 	rgba(97, 175, 194, 1);
 }
 h1 {
-  padding: 25px;
-  font-size: 50px;
+  padding: 45px;
+  font-size: 60px;
   text-align: center;
-  color: rgba(97, 175, 194, 1);
+  color: rgba(153, 235, 255, 1);
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   font-family: 'Open Sans Condensed', sans-serif;
 }
@@ -149,21 +152,24 @@ h1 {
 button {
   position: relative;
   vertical-align: top;
-  width: 90%;
+  width: 96%;
   height: 60px;
   padding: 2px;
-  margin: 10px;
+  margin: 8px 8px 0 8px;
   font-size: 22px;
   color: white;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
-  background: rgba(97, 175, 194, 1);;
+  background: rgba(47, 104, 117, 1);
   border: 0;
   border-bottom: rgba(97, 175, 194, 1);;
   cursor: pointer;
   -webkit-box-shadow: inset 0 -2px rgba(97, 175, 194, 1);;
   box-shadow: inset 0 -2px rgba(97, 175, 194, 1);
 }
+
+
+
 button:active {
   top: 1px;
   outline: none;
@@ -172,7 +178,7 @@ button:active {
 }
 .container {
   width: 900px;
-  margin: 50px auto;
+  margin: 20px auto;
   padding-left: 20px;
   float: right;
 
@@ -185,7 +191,7 @@ button:active {
   margin: 10px;
   height: 120px;
   width: 120px;
-  background: white;
+  color: rgba(153, 235, 255, 1);
   text-align: center;
 
   background-color: rgba(255,255,255,0.2);
@@ -193,13 +199,13 @@ button:active {
 
 .symbol:hover {
   cursor: pointer;
-  border: 3px solid rgba(97, 175, 194, 1);
+  border: 3px solid rgba(153, 235, 255, 1);
 }
 
 .symbol p {
   margin:38px;
   font-size: 40px;
-  color: rgba(97, 175, 194, 1);;
+  color: rgba(153, 235, 255, 1);
 }
 
 .gameContainer {
@@ -209,51 +215,72 @@ button:active {
   background-color: rgba(0,0,0,0.5);
 
 }
-
 div {
   letter-spacing: normal;
-  color: 	rgba(97, 175, 194, 1);
+  color: rgba(153, 235, 255, 1);
 }
 
 /*#progressBar {
-        display: inline-block;
+display: inline-block;
 
 }*/
 
 progress {
-/* style rules */
-border-radius: 0;
-background-color: black;
+  /* style rules */
+  border-radius: 0;
+  background-color: black;
 }
 progress::-webkit-progress-bar {
-/* style rules */
-background-color: black;
-border-radius: 0;
+  /* style rules */
+  background-color: black;
+  border-radius: 0;
 }
 progress::-webkit-progress-value {
-/* style rules */
-background-color: rgba(97, 175, 194, 1);
+  /* style rules */
+  background-color: rgba(153, 235, 255, 1);
 }
 progress::-moz-progress-bar {
-/* style rules */
-background-color: rgba(97, 175, 194, 1);
+  /* style rules */
+  background-color: rgba(153, 235, 255, 1);
+}
+h3 {
+  text-align: center;
+  line-height: 30px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 18px;
+  color: rgba(153, 235, 255, 1);
 }
 
- #progressBar {
-    margin: 40px 0 0 10px;
-    padding:0;
-    width:90%;
-    height:30px;
-    overflow:hidden;
-    /*color: rgba(97, 175, 194, 1);*/
+h4 {
 
-    border-radius:0px;
+  text-align: left;
+  padding: 0 0 35px 10px;
+  line-height: 22px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 14px;
+  color: rgba(153, 235, 255, 1);
+
+
+}
+#progressBar {
+  margin: 10px 50px 0 10px;
+  padding:0;
+  width:93.25%;
+  float: right;
+  height:5px;
+  overflow:hidden;
+  /*color: rgba(97, 175, 194, 1);*/
+
+  border-radius:0px;
 }
 
 
 
 aside {
   padding: 50px 10px;
+  color: rgba(153, 235, 255, 1);
 
   width: 350px;
   height: 500px;
