--- a/css/style.css
+++ b/css/style.css
@@ -132,10 +132,11 @@ h1 {
   color: rgba(153, 235, 255, 1);
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   font-family: 'Open Sans Condensed', sans-serif;
-
-
 }
 
+data-symbol-value {
+  color:blue;
+}
 
 button {
   position: relative;
@@ -189,27 +190,27 @@ progress::-moz-progress-bar {
 }
 
 h3 {
-  text-align: center;
+  text-align: left;
   line-height: 30px;
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 17px;
+  padding: 0 0 5px 10px;
+  font-size: 15px;
   color: rgba(153, 235, 255, 1);
 }
 
 h4 {
 
   text-align: left;
-  padding: 0 0 35px 10px;
+  padding: 0 0 25px 10px;
   line-height: 22px;
-  text-transform: uppercase;
   font-weight: bold;
   font-size: 14px;
   color: rgba(153, 235, 255, 1);
 }
 
 aside {
-  padding: 50px 10px;
+  padding: 30px 10px 10px 40px;
   color: rgba(153, 235, 255, 1);
 
   width: 350px;
@@ -220,11 +221,13 @@ aside {
 .container {
   width: 900px;
   margin: 20px auto;
-  padding-left: 40px;
+  padding-left: 20px;
   float: right;
 
 }
+.symbol.selected {
 
+}
 .symbol {
   float: left;
   margin: 10px;
@@ -248,7 +251,7 @@ aside {
 }
 
 .gameContainer {
-  width: 1240px;
+  width: 1280px;
   margin: 0 auto;
   height: 520px;
   background-color: rgba(0,0,0,0.5);
